refactor: centralize region compression configuration and improve flexibility in chunk writes
Standardized region compression handling by introducing shared configuration through `WorldRegionStoreConfiguration` and `MinecraftWorldAccessConfiguration`. Enabled chunk-level compression selection during writes for improved flexibility. Updated tests and documentation accordingly.